test/Fail/Issue2576MissingData.agda
module _ (A : Set) where

data A where
