test/Fail/Issue2576MissingData.err
Issue2576MissingData.agda:3,1-13: error: [GenericError]
Missing type signature for data definition A
when scope checking the declaration
  data A where
